feat: finaliza primeira versao para busca de pix por parametros